# cnsg-scripts

./: .gitignore  Aphelenchoides.tsv  DatasetRalstonia copy.tsv  DatasetRalstonia.tsv  README.html  README.md  Ralstonia.tsv  Streptomyces.tsv  data.csv  diffs_file  downloadGCA.sh  downloadfads.sh  errors.txt  extract_target_seqs.py  go.mod  godata.csv  hyper-gen-tester.sh  ksv2lsv.sh  maker_blast_db.sh  md2html.py  program-tester.sh  recs.csv  rs-comperl.sh  summary_downloader.sh  tmperlfile  tsv_datasets_downloader.sh  tsv_to_csv.sh  viz.r
aphel/: Aphelenchoides_21-09-2024.stats.csv  Aphelenchoides_21-09-2024.tsv
docs/: Index.md  README.md  index.html  resultados_blastn_search.py
docs/tamalamelematica/: book.toml
docs/tamalamelematica/src/: SUMMARY.md  chapter_1.md
down/: Strepto.tsv  downloadGenome.sh  summary_downloader.sh  tsv_datasets_downloader.sh
error_compare/: error_compare.py  fastani.csv  hyper-gen-tuning.sh  recs.csv.xz  results.csv.xz  results3.csv.xz
perlReplacer/: allcomperl.sh  comandos.txt  data.csv  diff_file  diffs  diffs_file  go-perl-tester.sh  go.out  perl.out  rs-comperl.sh  tmperlfile  tmpfile-rs
perlReplacer/count-fasta-go/: count-fasta-go  count.go  go.mod
perlReplacer/rs-count-fasta/: Cargo.toml  data  data.csv  outperl  outrs
perlReplacer/rs-count-fasta/src/: main.rs  main.rs.bk
