[package]
name = "rs-count-fasta"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
libc = "0.2.158"
