[package]
name = "rs-count-fasta"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
libc = "0.2.158"

[target.'x86_64-unknown-linux-gnu']
rustflags = ["-C", "target-feature=+crt-static"]
[target.'x86_64-unknown-linux-gnu'.dependencies]
libc = "0.2.158"

[target.'aarch64-apple-darwin']
rustflags = [ "-C", "target-feature=+crt-static"]
[target.'aarch64-apple-darwin'.dependencies]
libc = "0.2.158" # Adjust the version as needed
#RUSTFLAGS="-C target-feature=+crt-static" cargo build --target x86_64-unknown-linux-gnu --release